Fix contact page form button text alignmnet

--- a/styles/style.css
+++ b/styles/style.css
@@ -529,17 +529,19 @@ input {
 	font-weight: 400;
 }
 
-.contact-page-form .submitBtn {
-	padding-bottom: 1rem;
+.submitBtn2 {
+	padding-bottom: 1rem 0;
 	font-size: 1rem;
 	font-family: "Kanit", Tahoma, sans-serif;
 	font-weight: 500;
 	width: 100%;
 	margin-top: 1.5rem;
+	margin-bottom: 1.5rem;
 	border: 3px solid;
 }
 
-.submitBtn:hover {
+.submitBtn:hover,
+.submitBtn2:hover {
 	background: #292230;
 	color: #dfdee0;
 }
@@ -792,7 +794,8 @@ Additional Styles
 }
 */
 .submitBtn,
-.work-button {
+.work-button,
+.submitBtn2 {
 	background-color: rgb(223, 222, 224);
 	color: rgb(38, 38, 38);
 	border: solid black 2px;
@@ -809,12 +812,15 @@ Additional Styles
 	font-weight: 500;
 	border: 3px solid;
 }
+
 }
 
 @media only screen and (max-width: 586px) {
 	.hamburger {
 		padding-left: 70%;
 	}
+
+
 }
 
 
